--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
-  }
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0"
+  },
+  "_id": "planeta-green@0.1.0",
+  "readme": "ERROR: No README data found!"
 }
